# cc7515_t2

./: CMakeLists.txt  README.md
nbody_cuda/: CUDA_resultados.bak.csv  CUDA_resultados.bak0.csv  CUDA_resultados.csv  plot.py
nbody_cuda/reference/: ._Makefile  ._ParticleRenderer.cpp  ._ParticleRenderer.h  ._framerate.h  ._galaxy.cpp  ._galaxy_kernel.cu  Makefile  ParticleRenderer.cpp  ParticleRenderer.h  common.mk  framerate.h  galaxy.cpp
nbody_cuda/reference/data/: ._sprite.frag  ._sprite.vert  sprite.frag  sprite.vert
nbody_cuda/src/: kernel_1.cu  kernel_1_global-memory_1D.cu  kernel_2.cu  kernel_2_shared-memory_1D.cu  kernel_3_global-memory_2D.cu  kernel_4_shared-memory_2D.cu  main.cpp  nbody.h  nbody_cpu.cpp  nbody_cuda.cu  utils.cpp
nbody_cuda/src/include/: nbody.h  utils.h
nbody_opencl/: CMakeLists.txt  kernel_2d.cl  kernel_2d_local.cl  kernel_local.cl  plot.py  resultados.csv
nbody_opencl/include/: body.h  nbody_cpu.h  nbody_opencl.h
nbody_opencl/src/: main.cpp  nbody_cpu.cpp  nbody_opencl.cpp
